fixed issue #34
overrode material's input type file so it doesn't overflow on very small
width (otherwise the page gets a horizontal scroll bar on small viewport width

--- a/src/mrs/static/css/upload.css
+++ b/src/mrs/static/css/upload.css
@@ -20,8 +20,7 @@
 ul li {
     position: relative;
     margin: 1rem 0;
-    height: 2rem;
-    display: flex;
+    min-height: 2rem;
     justify-content: space-between;
     padding: 0 1rem;
 }
